--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "ejs": "^3.1.10",
-        "express": "^4.21.2",
+        "express": "^4.18.2",
+        "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
         "mssql": "^11.0.1",
         "node-fetch": "^2.7.0",
         "react": "^18.3.1",
+        "react-datepicker": "^7.6.0",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.1.1",
         "react-scripts": "^5.0.1",
         "sequelize": "^6.37.5",
-        "tedious": "^18.6.1"
+        "tedious": "^18.6.1",
+        "typescript": "^5.7.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
