--- a/.github/workflows/main_offers-in.yml
+++ b/.github/workflows/main_offers-in.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
+          nRUN npm install --legacy-peer-deps
           npm run build --if-present
           npm run test --if-present
 
@@ -45,6 +45,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
