--- a/.github/workflows/main_offers-in.yml
+++ b/.github/workflows/main_offers-in.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          nRUN npm install --legacy-peer-deps
+          npm install --legacy-peer-deps
           npm run build --if-present
           npm run test --if-present
 
